--- a/src/resourses/views/home.handlebars
+++ b/src/resourses/views/home.handlebars
@@ -1,1 +1,40 @@
-<h1>Main layout</h1>
+
+  <span class='bi bi-trash'></span>
+  <a href="/add-new"><i class="fa-solid fa-plus"></i>Add New</a>
+
+<div>
+  <table class="table mt-4">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td> <a href="/update" class="list-group-item"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+        <td> <a href="/update" class="list-group-item"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+        <td> <a href="/update" class="list-group-item"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
